# hulunote-app

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  trunk.toml  ui_config.toml
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN_TOKENS.md  LEPTOS_GUIDE.md  PRODUCT.md  RUST_UI_GUIDE.md  SPEC_RICH_TEXT_EDITOR.md  TEST_GUIDE.md  UI_GUIDELINES.md  USER_MANUAL.md
public/: style.css
public/hooks/: lock_scroll.js
src/: lib.rs
src/api/: mod.rs
src/app/: mod.rs
src/cache/: mod.rs  note_snapshot.rs
src/components/: mod.rs
src/components/hooks/: mod.rs  use_can_scroll_vertical.rs  use_random.rs
src/components/ui/: alert.rs  button.rs  card.rs  command.rs  dialog.rs  dropdown_menu.rs  input.rs  label.rs  mod.rs  popover.rs  scroll_area.rs  select.rs  separator.rs  spinner.rs  tooltip.rs
src/drafts/: mod.rs  note.rs
src/editor/: mod.rs
src/models/: mod.rs
src/pages/: mod.rs
src/state/: mod.rs  note_sync.rs
src/storage/: mod.rs
src/util/: mod.rs
src/wiki/: mod.rs
style/: tailwind.css
