[package]
name = "hulunote-app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = "0.7.3"
leptos_router = "0.7.3"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
reqwest = { version = "0.11", features = ["json"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Event",
  "EventTarget",
  "HtmlInputElement",
]

[profile.release]
opt-level = "s"
lto = true
