[package]
name = "hulunote-app"
version = "0.1.0"
edition = "2021"

[package.metadata.leptos]
# Rust/UI CLI expects this metadata to locate the Tailwind entry file.
tailwind-input-file = "style/tailwind.css"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.11", features = ["csr"] }
leptos_router = "0.8.11"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
urlencoding = "2.1"
console_error_panic_hook = "0.1"
reqwest = { version = "0.11", features = ["json"] }
js-sys = "0.3"
tw_merge = { version = "0.1.17", features = ["variant"] }
icons = { version = "0.18.0", features = ["leptos"] }
leptos_ui = "0.3.20"
leptos_dom = "0.8.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Event",
  "EventTarget",
  "HtmlInputElement",
  "History",
  "Location",
  "Storage",
  "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
